# fast_api

./: .env.py  .gitignore  asgi.py  conftest.py  pyproject.toml  test_datatyime.py  test_simple.py
.github/workflows/: ci.ymi  ci.yml
app/: __init__.py
app/apis/utils/: base62.py  sqids.py
app/apis/v1/: meeting_router.py  participant_router.py
app/configs/: base_config.py
app/dtos/: create_meeting_response.py  create_participant_request.py  update_meeting_request.py
app/service/: meeting_service_mysql.py
app/tests/apis/v1/: test_meeting_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py  participant.py  participant_date.py
practice/: test_datatyime.py  test_temp.py
